# data-interfaces

./: .gitignore  requirements.txt  setup.cfg
src/: base_interface.py  utils.py
src/conditions/: base.py  initial.py
src/data_interfaces/: base_interface.py  utils.py
src/data_interfaces/analytics/: exploratory.py
src/data_interfaces/conditions/: base.py  curriculum.py  initial.py
src/data_interfaces/loaders/: base.py  phantom.py
src/data_interfaces/remote/: drive_manager.py
src/data_interfaces/stats/: agents.py  run.py  specialist.py
src/data_interfaces/upload/: drive_manager.py
