# Refers to: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for more options
[metadata]
name = data-interfaces
version = 0.1.4

[options]
packages = find:
package_dir =
    =src
#...
install_requires =
    setuptools
    wheel
    numpy
    pandas
    pydrive

[options.packages.find]
where = src
